syntax = "proto3";

package alphomega.docker;
option go_package = "github.com/alpha-omega-corp/github-svc/proto/docker";

service DockerService {
  rpc DeleteContainer(DeleteContainerRequest) returns (DeleteContainerResponse) {}
  rpc GetContainers(GetContainersRequest) returns (GetContainersResponse) {}
  rpc GetContainerLogs(GetContainerLogsRequest) returns (GetContainerLogsResponse) {}
  rpc StartContainer(StartContainerRequest) returns (StartContainerResponse) {}
  rpc StopContainer(StopContainerRequest) returns (StopContainerResponse) {}
  rpc CreatePackageContainer(CreatePackageContainerRequest) returns (CreatePackageContainerResponse) {}
  rpc GetPackageVersionContainers(GetPackageVersionContainersRequest) returns (GetPackageVersionContainersResponse) {}
}

message GetPackageVersionContainersRequest {
  string path = 1;
}

message GetPackageVersionContainersResponse {
  repeated Container containers = 1;
}

message CreatePackageContainerRequest {
  string path = 1;
  string name = 2;
}

message CreatePackageContainerResponse {
  int64 status = 1;
}

message StopContainerRequest {
  string containerId = 1;
}

message StopContainerResponse {
  int64 status = 1;
}

message StartContainerRequest {
  string containerId = 1;
}

message StartContainerResponse {
  int64 status = 1;
}


message DeleteContainerRequest {
  string containerId = 1;
}

message DeleteContainerResponse {
  int64 status = 1;
}




message GetContainersRequest {}

message GetContainersResponse {
  repeated Container containers = 1;
}

message GetContainerLogsRequest {
  string containerId = 1;
}

message GetContainerLogsResponse {
  string logs = 1;
}

message Container {
  string id = 1;
  string image = 2;
  string status = 3;
  string command = 4;
  int64 created = 5;
  string state = 6;
  repeated string names = 7;
}
